правка checkbox для IE

--- a/catalog.html
+++ b/catalog.html
@@ -28,7 +28,7 @@
             
             <ul class="nav_list_catalog">
               <li>
-                <a class="nav_list_user" href="#">Валентин Петухов</a>
+                <a class="nav_list_user" href="user_12345.html">Валентин Петухов</a>
                 <a class="logout" href="#">Выйти</a>
               </li>
               <li><a class="nav_list_compare compare_catalog" href="#">Сравнить</a></li>
