--- a/index.html
+++ b/index.html
@@ -67,25 +67,12 @@
         <div class="container">
           <h2 class="visually_hidden">Промо-слайдер</h2>
 
-          <form class="slider_form" action="https://echo.htmlacademy.ru/" method="GET">
-            <ul class="slideshow_controls">
+          <div class="slider_control">
+            <button class="slider_btn current_btn"></button>
+            <button class="slider_btn"></button>
+            <button class="slider_btn"></button>
+          </div>
 
-              <li>
-                <input class="visually_hidden slider_input" type="radio" name="slider" id="first_slider" checked>
-                <label for="first_slider"></label>
-              </li>
-
-              <li>
-                <input class="visually_hidden slider_input" type="radio" name="slider" id="second_slider">
-                <label for="second_slider"></label>
-              </li>
-
-              <li>
-                <input class="visually_hidden slider_input" type="radio" name="slider" id="third_slider">
-                <label for="third_slider"></label>
-              </li> 
-            </ul>
-          </form>
           
           <div class="slide_item slide_item_1 active">
             <div class="img_wrap">
@@ -96,7 +83,7 @@
               <p>Самая длинная палка для селфи доступна в нашем магазине.
                 Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
               </p>
-              <a class="btn font_extra">Подробнее</a>  
+              <a href="#" class="btn font_extra">Подробнее</a>  
 
               <dl class="promo_details">
                 <div class="promo_specific">
