--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             </svg>
             <h2 class="second_title font_extra">Контакты</h2>
             <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-            <img class="button_map" src="img/map.jpg" width="560" height="222" alt="Карта офиса по адресу улица Строителей, 15">
+            <img class="button_map" src="img/map.jpg" width="560" height="222" alt="Карта офиса по адресу улица Строителей, 15" tabindex="0">
             <button class="btn btn_feedback font_extra">Напишите нам</button> 
           </div>
 
