фокус сортировка по возрастанию\убыванию

--- a/catalog.html
+++ b/catalog.html
@@ -185,10 +185,10 @@
             
             <ul class="arrows">
               <li class="arrows_item arrows_item_asc">
-                <a class="up selected"><img src="img/icon-down-dir.png" width="11" height="10" alt="сортировать по возрастанию"></a>
+                <a class="up" href="#"><img src="img/icon-down-dir.png" width="11" height="10" alt="сортировать по возрастанию"></a>
               </li>
               <li class="arrows_item arrows_item_desc">
-                <a class="down" href="#"><img src="img/icon-down-dir.png" width="11" height="10" alt="сортировать по убыванию"></a>
+                <a class="down selected"><img src="img/icon-down-dir.png" width="11" height="10" alt="сортировать по убыванию"></a>
               </li>
             </ul>
           </div>
