фокус на карточках товаров

--- a/catalog.html
+++ b/catalog.html
@@ -173,7 +173,7 @@
 						</div>
 						<section class="catalog_cards">
 							<h2 class="visually_hidden">Каталог товаров</h2>
-							<article class="catalog_items font_extra">
+							<article class="catalog_items font_extra" tabindex="0">
 								<h2 class="visually_hidden">Любительская селфи-палка</h2>
 								<img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
 								<div class="catalog_items_info">
@@ -185,7 +185,7 @@
 									<button class="btn_compare">Добавить к сравнению</button>
 								</div>
 							</article>
-							<article class="catalog_items font_extra">
+							<article class="catalog_items font_extra" tabindex="0">
 								<h2 class="visually_hidden">Профессиональная селфи-палка</h2>
 								<img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка"> 
 								<div class="catalog_items_info">
@@ -197,7 +197,7 @@
 									<button class="btn_compare">Добавить к сравнению</button>
 								</div>
 							</article>
-							<article class="catalog_items font_extra">
+							<article class="catalog_items font_extra" tabindex="0">
 								<h2 class="visually_hidden">Непотопляемая селфи-палка</h2>
 								<img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
 								<div class="catalog_items_info">
@@ -209,7 +209,7 @@
 									<button class="btn_compare">Добавить к сравнению</button>
 								</div>
 							</article>
-							<article class="catalog_items font_extra">
+							<article class="catalog_items font_extra" tabindex="0">
 								<h2 class="visually_hidden">Селфи-палка «Следуй за мной»</h2>
 								<img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»"> 
 								<div class="catalog_items_info">
