правка по замечаниям

--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
 		<title>HTML Academy: Девайс</title>
 		<link rel="stylesheet" href="css/normalize_min.css">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap&subset=cyrillic" rel="stylesheet">
-		<link rel="stylesheet" href="css/style_min.css">
+		<link rel="stylesheet" href="css/style.css">
   </head>
   
 	<body class="page">
@@ -177,7 +177,7 @@
 						<section class="catalog_cards">
 							<h2 class="visually_hidden">Каталог товаров</h2>
 							<article class="catalog_items font_extra" tabindex="0">
-								<h2 class="visually_hidden">Любительская селфи-палка</h2>
+								<h3 class="visually_hidden">Любительская селфи-палка</h2>
 								<img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
 								<div class="catalog_items_info">
 									<p><a href="#">Любительская селфи-палка</a></p>
@@ -189,7 +189,7 @@
 								</div>
 							</article>
 							<article class="catalog_items font_extra" tabindex="0">
-								<h2 class="visually_hidden">Профессиональная селфи-палка</h2>
+								<h3 class="visually_hidden">Профессиональная селфи-палка</h2>
 								<img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка"> 
 								<div class="catalog_items_info">
 									<p class="prof_selfi"><a href="#">Профессиональная селфи-палка</a></p>
@@ -201,7 +201,7 @@
 								</div>
 							</article>
 							<article class="catalog_items font_extra" tabindex="0">
-								<h2 class="visually_hidden">Непотопляемая селфи-палка</h2>
+								<h3 class="visually_hidden">Непотопляемая селфи-палка</h2>
 								<img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
 								<div class="catalog_items_info">
 									<p><a href="#">Непотопляемая селфи-палка</a></p>
@@ -213,7 +213,7 @@
 								</div>
 							</article>
 							<article class="catalog_items font_extra" tabindex="0">
-								<h2 class="visually_hidden">Селфи-палка «Следуй за мной»</h2>
+								<h3 class="visually_hidden">Селфи-палка «Следуй за мной»</h2>
 								<img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»"> 
 								<div class="catalog_items_info">
 									<p><a href="#">Селфи-палка «Следуй за мной»</a></p>
