--- a/index.html
+++ b/index.html
@@ -60,11 +60,7 @@
 			<section class="slideshow">
 				<div class="container">
 					<h2 class="visually_hidden">Промо-слайдер</h2>
-					<div class="slider_control">
-						<button class="slider_btn current_btn" data-slide="first_slide"></button>
-						<button class="slider_btn" data-slide="second_slide"></button>
-						<button class="slider_btn" data-slide="third_slide"></button>
-					</div>
+
 					<div class="slide_item slide_item_1" data-slide="first_slide">
 						<div class="img_wrap">
 							<img src="img/slider-1.png" width="384" height="486" alt="Самая длинная палка для селфи">
@@ -87,7 +83,7 @@
 								  <th>Вес палки</th>
 								  <th>Материал</th>
 								</tr>
-							  </table> 
+							</table> 
 						</div>
 					</div>
 					<div class="slide_item slide_item_2 covered" data-slide="second_slide">
@@ -133,6 +129,13 @@
 
 						</div>
 					</div>
+
+					<div class="slider_control" aria-label="Переключение слайдера">
+						<button class="slider_btn current_btn" data-slide="first_slide"></button>
+						<button class="slider_btn" data-slide="second_slide"></button>
+						<button class="slider_btn" data-slide="third_slide"></button>
+					</div> 
+
 				</div>
 			</section>
 			<section class="category">
@@ -237,9 +240,9 @@
 						<p class="about_us_p">Огромный выбор гаджетов не оставит равнодушным гика,  который есть в каждом из нас.</p>
 						<p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
 						<ul class="dellivery_company">
-							<li><span>Деловые Линии</span></li>
-							<li><span>Автотрейдинг</span></li>
-							<li><span>ЖелДорЭкспедиция</span></li>
+							<li><span class="font_extra">Деловые Линии</span></li>
+							<li><span class="font_extra">Автотрейдинг</span></li>
+							<li><span class="font_extra">ЖелДорЭкспедиция</span></li>
 						</ul>
 						<a href="#" class="btn font_extra btn_more">Подробнее о нас</a>
 					</div>
@@ -257,7 +260,14 @@
 			<div class="container">
 				<div class="footer_top">
 					<div class="footer_logo">
-						<img src="img/footer_logo.png" width="163" height="35" alt="Device">
+						<svg xmlns="http://www.w3.org/2000/svg" width="163" height="35" viewBox="0 0 163 35">
+							<defs>
+								<style>
+									.cls-1{fill-rule:evenodd}
+								</style>
+							</defs>
+							<path fill="#ffc600" id="_-e-logo" d="M-.151.702v33.6h13.532a15.72 15.72 0 0 0 11.72-4.824 16.458 16.458 0 0 0 4.712-11.976 16.458 16.458 0 0 0-4.712-11.976A15.723 15.723 0 0 0 13.381.702H-.151zM7.582 26.91V8.091h5.8a8.646 8.646 0 0 1 6.5 2.568 9.407 9.407 0 0 1 2.489 6.84 9.406 9.406 0 0 1-2.489 6.84 8.642 8.642 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3H42.378V8.091h13.291V.702H34.645v33.6H55.91V26.91H42.378v-5.952zm36.343 13.344L89.744.702h-8.458l-7.491 24.72L66.304.702h-8.457l11.019 33.6h9.859zm14.4 0h7.733V.702h-7.733v33.6zm38.615-1.416a15.506 15.506 0 0 0 6.041-5.688l-6.67-3.84a7.482 7.482 0 0 1-3.165 3.024 9.87 9.87 0 0 1-4.664 1.1 9.595 9.595 0 0 1-7.177-2.736 9.909 9.909 0 0 1-2.682-7.248 9.909 9.909 0 0 1 2.682-7.248 9.595 9.595 0 0 1 7.177-2.736 9.897 9.897 0 0 1 4.639 1.08 7.592 7.592 0 0 1 3.19 3.048l6.67-3.84a15.873 15.873 0 0 0-6.09-5.688 17.42 17.42 0 0 0-8.409-2.088c-9.779-.272-17.797 7.691-17.591 17.472-.208 9.781 7.809 17.747 17.588 17.476a17.52 17.52 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085V8.091h13.29V.702h-21.023v33.6h21.265V26.91h-13.532v-5.952z" class="cls-1" data-name="-e-logo"/>
+						</svg>
 					</div>
 					<div class="footer_options">
 						<ul class="nav_footer">
@@ -332,7 +342,9 @@
 					<section class="copyright">
 						<h2 class="visually_hidden">Копирайт</h2>
 						<a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank" rel="noopener">
-						<img src="img/logo-html.png" width="27" height="35" alt="Переход на страницу интенсивного курса HTML academy">
+							<svg fill="#ffc600" xmlns="http://www.w3.org/2000/svg" width="27" height="35" viewBox="0 0 26.943 34.09">
+								<path d="M13.62.017L13.472 0 0 1.412v24.661l13.473 8.017 13.43-7.99.042-.025V1.412L13.62.017zm11.399 12.11L13.495 5.334l-.001-.104-.087.05-.088-.056v.109L1.925 12.118V3.147l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.479 2.64-7.093-4.221-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.031-1.787-.014 1.413 1.853 1.091-1.8 1.081-11.356-6.751 11.371-6.835zm-11.48 8.34l11.411 6.791.016 1.044-7.942-4.728-.015 1.416 7.979 4.795.018 1.076-7.973-4.74-.013 1.414 8.021 4.822.046.025 8.143-4.872-.011-5.177 3.415-2.036v10.021L13.472 31.85 1.925 24.979v-9.852z"/>
+							</svg>
 						</a>
 					</section>
 				</div>
