--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 					</div>
 
 					<div class="slider_control" aria-label="Переключение слайдера">
-						<button class="slider_btn current_btn" data-slide="first_slide"></button>
-						<button class="slider_btn" data-slide="second_slide"></button>
-						<button class="slider_btn" data-slide="third_slide"></button>
+						<button class="slider_btn current_btn" data-slide="first_slide" aria-label="Первый слайд"></button>
+						<button class="slider_btn" data-slide="second_slide" aria-label="Второй слайд"></button>
+						<button class="slider_btn" data-slide="third_slide" aria-label="Третий слайд"></button>
 					</div> 
 
 				</div>
@@ -250,7 +250,7 @@
 						<h2 class="second_title font_extra">Контакты</h2>
 						<p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
 						<img class="button_map" src="img/map.jpg" width="560" height="222" alt="Карта офиса по адресу улица Строителей, 15" tabindex="0">
-						<a class="btn btn_feedback font_extra">Напишите нам</a> 
+						<a href="" class="btn btn_feedback font_extra">Напишите нам</a> 
 					</div>
 				</div>
 			</section>
@@ -302,9 +302,9 @@
 				<div class="footer_middle">
 					<p>г. Москва, ул. Строителей, 15</p>
 					<ul class="footer_links">
-						<li><a href="#">Доставка</a></li>
-						<li><a href="#">Гарантия</a></li>
-						<li><a href="#">Контакты</a></li>
+						<li class="font_extra"><a href="#">Доставка</a></li>
+						<li class="font_extra"><a href="#">Гарантия</a></li>
+						<li class="font_extra"><a href="#">Контакты</a></li>
 					</ul>
 					<a href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
 				</div>
